fix: mobile sidebar top:0, remove header gap

--- a/client/src/pages/Catalog.module.css
+++ b/client/src/pages/Catalog.module.css
@@ -121,7 +121,7 @@
 
 .mobileSidebar {
   position: fixed;
-  top: 64px;
+  top: 0;
   left: 0;
   bottom: 0;
   width: 85%;
